# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
