[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
serde-aux = "4"
tracing-actix-web = "0.7.14"
secrecy = { version = "0.8", features = ["serde"]}
actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"]}
config = "0.14.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.11.5"
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "=0.3.9"
tracing-log = "0.2.0"
once_cell = "1.20.2"


[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]